Updates from Overleaf

--- a/03_implementation.tex
+++ b/03_implementation.tex
@@ -187,8 +187,8 @@ What we immediately observe is that two of the multiplications are unnecessary s
 \begin{itemize}
     \item \texttt{NullJac} -- a struct only containing two numbers that represents the number of rows and columns in a null matrix.
     \item \texttt{IdentityJac} -- a struct only containing one number that represents the number of rows and columns in an identity matrix.
-    \item \texttt{DiagJac} -- a struct containing a vector with the diagonal values of a diagonal matrix. The length of the vector equals the number of rows and columns.
-    \item \texttt{SparseJac} -- a struct containing a \texttt{SparseMatrixCSC} matrix.
+    \item \texttt{DiagJac} -- a struct containing a vector called \texttt{jac} with the diagonal values of a diagonal matrix. The length of \texttt{jac} equals the number of rows and columns.
+    \item \texttt{SparseJac} -- a struct containing a \texttt{SparseMatrixCSC} matrix called \texttt{jac}.
 \end{itemize}
 Now the multiple dispatch system in Julia comes in handy. Since Julia understands at run-time what type of \texttt{CustomJac} we have, whether it is a \texttt{NullJac}, \texttt{IdentityJac}, \texttt{DiagJac} or \texttt{SparseJac}, we can implement different methods for all possible combinations. Since we in each implementation now know what type of matrix we are dealing with, we can optimize the performance. As an example, consider the calculation of the Jacobian w.r.t the primary variable \textbf{y} in \eqref{eq:JacobianCalculationY} (All the implementations of operators on structs extending the \texttt{CustomJac} type are called from outer functions that check the legality of the operations. Hence there are no checks in the following presented implementations). First we have a vector multiplied element-wise by a null matrix. The implementation
 \lstinputlisting{code/vectorTimesNullJac.jl}
@@ -198,7 +198,12 @@ This is the first calculation we have seen that will contribute to make \texttt{
 \lstinputlisting{code/nullJacPlusDiagJac.jl}
 For the same reason as explained for the element-wise multiplication between a vector and a \texttt{NullJac} matrix, this implementation will not have any big advantages compared to the \texttt{SparseMatrixCSC} implementation used in \texttt{FAD} as it will also quickly figure out the needlessness of the calculation.
 
-Another type of calculation that \texttt{CJAD} will be more efficient than \texttt{FAD}'s \texttt{SparseMatrixCSC} implementation is when 
+Another type of calculation that \texttt{CJAD} will be more efficient than \texttt{FAD}'s \texttt{SparseMatrixCSC} implementation is when a vector is element-wise multiplied with a diagonal Jacobian. This is an operation that is often used as it in addition to be used when we multiply a \texttt{CJAD}-variable with a vector it also appears every time the product rule and the chain rule is used. This is every time we multiply two \texttt{CJAD}-variables or when we evaluate an elementary function like the exponential (given that the Jacobian is of \texttt{DiagJac} type). Since this type of element-wise multiplication is simply two diagonal matrices multiplied together, \texttt{CJAD}'s implementation can element-wise multiply the two vectors and obtain the new diagonal of the new Jacobian:
+\lstinputlisting{code/vectorTimesDiagJac.jl}
+The same operation for \texttt{FAD} will be slower since \texttt{SparseMatrixCSC} does not possess any information that the matrix is diagonal and it has to perform the operation as a regular multiplication between to sparse matrices. This will include checks to be certain that the multiplication is done correctly, and will hence be slower than simply element-wise multiply two vectors.
+
+Up until now we have seen that for calculations including Jacobians of the types \texttt{NullJac}, \texttt{IdentityJac} and \texttt{DiagJac} we can take shortcuts in the calculations to gain better computational efficiency. But when the Jacobians no longer are null, identity or diagonal, \texttt{CJAD} and \texttt{FAD} are equal, as \texttt{CJAD} transitions to use the \texttt{SparseMatrixCSC}-library as well with its \texttt{SparseJac} type. It is hence interesting to look closer into how we handle element-wise multiplication between a vector and a \texttt{SparseJac}, as this is an operation that is done frequently in the product rule and the chain rule as explained before. There are two different ways of implementing this operator that will use different parts of the \texttt{SparseMatrixCSC} library. The first implementation is to convert the vector into a sparse diagonal matrix and perform a matrix times matrix multiplication with \texttt{SparseMatrixCSC} matrices:
+
 
 \subsection{Efficient Code VS Readable and Elegant Code}
 There is usually a fine balance between writing efficient code and readable/elegant code. Sometimes you have the opportunity to do both, but often you have to choose which of them you want to give most focus. In the end of \autoref{sec:FAD} I explained how we can elegantly implement the \texttt{sum} function, and all other built-in functions that iterate through the \texttt{FAD}-variables, only by implementing the \texttt{iterate} function. This is a very elegant use of Julia's multiple dispatch system as we get a lot of functionality "for free". The downside however is that we loose potential computational efficiency that we could achieve by implementing the \texttt{sum} function ourselves. Let us define a random function $\psi$ where the AD-representation and the \texttt{sum} of $\psi$ is given by
