--- a/03_implementation.tex
+++ b/03_implementation.tex
@@ -192,17 +192,51 @@ What we immediately observe is that two of the multiplications are unnecessary s
 \end{itemize}
 Now the multiple dispatch system in Julia comes in handy. Since Julia understands at run-time what type of \texttt{CustomJac} we have, whether it is a \texttt{NullJac}, \texttt{IdentityJac}, \texttt{DiagJac} or \texttt{SparseJac}, we can implement different methods for all possible combinations. Since we in each implementation now know what type of matrix we are dealing with, we can optimize the performance. As an example, consider the calculation of the Jacobian w.r.t the primary variable \textbf{y} in \eqref{eq:JacobianCalculationY} (All the implementations of operators on structs extending the \texttt{CustomJac} type are called from outer functions that check the legality of the operations. Hence there are no checks in the following presented implementations). First we have a vector multiplied element-wise by a null matrix. The implementation
 \lstinputlisting{code/vectorTimesNullJac.jl}
-efficiently knows immediately that there is no need to do any calculations, the result will be a null matrix of the same size as before. Without diving too deep into the implementation of \texttt{SparseMatrixCSC}, but only by considering what kind of information the \texttt{SparseMatrixCSC}-struct contains, this implementation should not make a big difference in the computational efficiency of \texttt{CJAD} compared to \texttt{FAD}. The reason for this is that the implementation of \texttt{SparseMatrixCSC} will also quickly realize that its vectors are of length zero and the matrix is a zero matrix. The speed difference of the two implementations will hence be small. However, the second calculation in \eqref{eq:JacobianCalculationY} is a vector multiplied element-wise by an identity matrix. The result will be a diagonal matrix with the values of the vector on the diagonal. The \texttt{SparseMatrixCSC} implementation only knows that we have a sparse matrix with some values and is unaware that it actually is an identity matrix. This means that it has to do all the calculations without any shortcuts.  The implementation for \texttt{IdentityJac} however, automatically knows the result of this calculation and simply makes a diagonal Jacobian with the vector on the left hand side:
+efficiently knows immediately that there is no need to do any calculations, the result will be a null matrix of the same size as before. Without diving too deep into the implementation of \texttt{SparseMatrixCSC}, but only by considering what kind of information the \texttt{SparseMatrixCSC}-struct contains, this implementation should not make a big difference in the computational efficiency of \texttt{CJAD} compared to \texttt{FAD}. The reason for this is that the implementation of \texttt{SparseMatrixCSC} will also quickly realize that its vectors are of length zero and the matrix is a zero matrix. The speed difference of the two implementations will hence be small. However, the second calculation in \eqref{eq:JacobianCalculationY} is a vector multiplied element-wise by an identity matrix. The result will be a diagonal matrix with the values of the vector on the diagonal. The \texttt{SparseMatrixCSC} implementation only knows that we have a sparse matrix with some values and is unaware that it actually is the identity matrix. This means that it has to do all the calculations without any shortcuts.  The implementation for \texttt{IdentityJac} however, automatically knows the result of this calculation and simply makes a diagonal Jacobian with the vector on the left hand side:
 \lstinputlisting{code/vectorTimesIdentityJac.jl}
 This is the first calculation we have seen that will contribute to make \texttt{CJAD} more efficient than \texttt{FAD}. To finish the calculations in \eqref{eq:JacobianCalculationY}, we finally have to add a null matrix and a diagonal matrix. Since there is really no need of doing this adding, the implementation simply returns the diagonal matrix:
 \lstinputlisting{code/nullJacPlusDiagJac.jl}
 For the same reason as explained for the element-wise multiplication between a vector and a \texttt{NullJac} matrix, this implementation will not have any big advantages compared to the \texttt{SparseMatrixCSC} implementation used in \texttt{FAD} as it will also quickly figure out the needlessness of the calculation.
 
-Another type of calculation that \texttt{CJAD} will be more efficient than \texttt{FAD}'s \texttt{SparseMatrixCSC} implementation is when a vector is element-wise multiplied with a diagonal Jacobian. This is an operation that is often used as it in addition to be used when we multiply a \texttt{CJAD}-variable with a vector it also appears every time the product rule and the chain rule is used. This is every time we multiply two \texttt{CJAD}-variables or when we evaluate an elementary function like the exponential (given that the Jacobian is of \texttt{DiagJac} type). Since this type of element-wise multiplication is simply two diagonal matrices multiplied together, \texttt{CJAD}'s implementation can element-wise multiply the two vectors and obtain the new diagonal of the new Jacobian:
+Another type of calculation that \texttt{CJAD} will be more efficient than \texttt{FAD}'s \texttt{SparseMatrixCSC} implementation is when a vector is element-wise multiplied with a diagonal Jacobian. This is an operation that is often used, because in addition to be used when we multiply a \texttt{CJAD}-variable with a vector, it appears every time the product rule and the chain rule is used. This is every time we multiply two \texttt{CJAD}-variables or when we evaluate an elementary function like the exponential (given that the Jacobian is of \texttt{DiagJac} type). Since this type of element-wise multiplication is simply two diagonal matrices multiplied together, \texttt{CJAD}'s implementation can element-wise multiply the two vectors and obtain the new diagonal of the new Jacobian:
 \lstinputlisting{code/vectorTimesDiagJac.jl}
-The same operation for \texttt{FAD} will be slower since \texttt{SparseMatrixCSC} does not possess any information that the matrix is diagonal and it has to perform the operation as a regular multiplication between to sparse matrices. This will include checks to be certain that the multiplication is done correctly, and will hence be slower than simply element-wise multiply two vectors.
+The same operation for \texttt{FAD} will be slower since \texttt{SparseMatrixCSC} does not possess any information that the matrix is diagonal and it has to perform the operation as a regular multiplication between to sparse matrices. This will include checks to be certain that the multiplication is done correctly, and will hence be slower than simply element-wise multiply two vectors. As said this operation appears often as it is used in the chain rule and the product rule. Consider the product rule and the implementation
+
 
 Up until now we have seen that for calculations including Jacobians of the types \texttt{NullJac}, \texttt{IdentityJac} and \texttt{DiagJac} we can take shortcuts in the calculations to gain better computational efficiency. But when the Jacobians no longer are null, identity or diagonal, \texttt{CJAD} and \texttt{FAD} are equal, as \texttt{CJAD} transitions to use the \texttt{SparseMatrixCSC}-library as well with its \texttt{SparseJac} type. It is hence interesting to look closer into how we handle element-wise multiplication between a vector and a \texttt{SparseJac}, as this is an operation that is done frequently in the product rule and the chain rule as explained before. There are two different ways of implementing this operator that will use different parts of the \texttt{SparseMatrixCSC} library. The first implementation is to convert the vector into a sparse diagonal matrix and perform a matrix times matrix multiplication with \texttt{SparseMatrixCSC} matrices:
+\lstinputlisting{code/vectorAsMatrixTimesSparseJac.jl}
+I will call this method the \textit{matrix-multiplication} method. The second method is keeps the vector form and use element-wise multiplication between the vector and the \texttt{SparseMatrixCSC} matrix:
+\lstinputlisting{code/vectorTimesSparseJac.jl}
+I will call this the \textit{dot-multiplication} method. As it is difficult to say without first hand knowledge of the implementation of \texttt{SparseMatrixCSC} which method is best to implement, I will test the two methods against each other. As a test I have created a random vector of length 40 and a random sparse matrix of size $40\times 40$ with 20 percent of the elements as non-zero. I will then perform the element-wise multiplication 10 000 times to separate the efficiency of the two methods. To check which method is actually more efficient, and by how much, we can use the \textit{@btime} macro function from the \emph{\cite{BenchmarkTools}} library. This function gives us the number of allocations, the amount of memory used and the time spent. \footnote{All benchmarks in this project are performed on a MacBook Pro (Retina, 13-inch, Late 2013), 2,8 GHz Intel Core i7 processor and 16 GB 1600 MHz DDR3 memory.}
+The results of the test can be seen in \autoref{tab:VectorMatrixMultiplicationSmallMatrix}.
+\begin{table}[H]
+    \centering
+    \caption{The number of allocations, amount of memory and time spent is given for the element-wise multiplication of a vector of length 40 and a sparse matrix of size $40\times 40$ with 20 percent of the elements as non-zero. The vector and matrix is multiplied together 10 000 times.}
+    \label{tab:VectorMatrixMultiplicationSmallMatrix}
+    \def\arraystretch{1.5}
+    \begin{tabular}{cccc}
+    \textbf{Method} & \textbf{Number of Allocations} & \textbf{Megabytes} & \textbf{Milliseconds} \\
+        \hline
+         \textit{Matrix-multiplication} & 1 420 000 & 194 & 187 \\  
+         \textit{Dot-multiplication} & 60 000 & 264 & 87\\ 
+         \hline
+    \end{tabular}
+\end{table}
+The results from \autoref{tab:VectorMatrixMultiplicationSmallMatrix} shows that the \textit{dot-multiplication} method has far less allocations, is more than twice as fast, but it uses a bit more memory. Based on this it might tempting to say that the \textit{dot-multiplication} method is a better choice of implementation than the \textit{matrix-multiplication}. However, we will use \texttt{CJAD} on numerical applications and the matrices we will work on will be much larger and very sparse. As a test example I have used a matrix from \autoref{ch:FlowSolver} that is more relevant than the matrix used in the test for \autoref{tab:VectorMatrixMultiplicationSmallMatrix}. This matrix is of size $8000\times 8000$ and only 0.08 percent of the elements are non-zero. The results can be seen in \autoref{tab:VectorMatrixMultiplicationFlowSolverMatrix}
+\begin{table}[H]
+    \centering
+    \caption{The number of allocations, amount of memory and time spent is given for the element-wise multiplication of a vector of length 8000 and a matrix of size $8000\times 8000$ with 0.08 percent non-zero elements. The matrix is taken from \autoref{ch:FlowSolver}.}
+    \label{tab:VectorMatrixMultiplicationFlowSolverMatrix}
+    \def\arraystretch{1.5}
+    \begin{tabular}{cccc}
+    \textbf{Method} & \textbf{Number of Allocations} & \textbf{Megabytes} & \textbf{Milliseconds} \\
+        \hline
+         \textit{Matrix-multiplication} & 240 370 & 32 & 28 \\  
+         \textit{Dot-multiplication} & 180 & 10 243 & 2 458\\ 
+         \hline
+    \end{tabular}
+\end{table}
+As we can see from \autoref{tab:VectorMatrixMultiplicationFlowSolverMatrix} the \textit{dot-multiplication method} still has far less allocations, but now it uses a lot more memory and as a consequence it is now much slower than the \textit{matrix-multiplication} method. This shows that for the purpose of this project, the \textit{matrix-multiplication} method is a much better choice of implementation.
 
 
 \subsection{Efficient Code VS Readable and Elegant Code}
@@ -238,7 +272,7 @@ There is usually a fine balance between writing efficient code and readable/eleg
 \end{multicols}
 Consider now the previous approach where we only have implemented the \texttt{iterate} function and we use the \texttt{Base.sum} function (The standard \texttt{sum} function in Julia) to sum up the values in $\psi$. For each iteration in the addition we access row $i$ in the $\psi$ and add it to the total sum. This consist of extracting row $i$ from each Jacobian and creating a new AD-variable only consisting of row $i$. This leads to a lot of extra memory allocation, and in the case for $\psi$ we have to allocate memory for three new AD-variables. This extra allocation can avoided by doing the summation of each column at once instead of operate on a row to row basis. For \texttt{CJAD} this can be done with the following implementation of \texttt{sum}:
 \lstinputlisting{code/sum.jl}
-Instead of retrieving each row, one by one, like we did using \texttt{Base.sum}, we now add up each column in one go. \texttt{colSum} is a function implemented in each extended type of \texttt{CustomJac} that sums up all the columns in the Jacobians and returns a $1\times n$ matrix. Here $n$ is a number depending on the space for the relevant primary variable($n_\psi = 3$). For \texttt{NullJac} the function simply returns a $1\times n$ null matrix, for \texttt{IdentityJac} a $1\times n$ matrix containing only ones, for \texttt{DiagJac} a $1\times n$ matrix which is the transposed of the diagonal vector, and lastly for \texttt{SparseJac} it returns a $1\times n$ matrix where each column is added together. To check that this new \texttt{sum} function actually is more efficient, we can use the \textit{@btime} macro function from the \emph{\cite{BenchmarkTools}} library. This gives us the number of allocations and memory used. By creating a random \texttt{CJAD}-variable of length 400 with all of the four different Jacobian types(all $400\times 400$ with random values), we can compare how efficient the two methods sum up the \texttt{CJAD}-variable. The result is displayed in \autoref{tab:differentSumFunctions} and shows that even though the method of only implementing the \texttt{iterate} function is elegant to obtain the \texttt{sum} function, it can be much more efficient both in memory allocation and speed by implementing it specifically.
+Instead of retrieving each row, one by one, like we did using \texttt{Base.sum}, we now add up each column in one go. \texttt{colSum} is a function implemented in each extended type of \texttt{CustomJac} that sums up all the columns in the Jacobians and returns a $1\times n$ matrix. Here $n$ is a number depending on the space for the relevant primary variable($n_\psi = 3$). For \texttt{NullJac} the function simply returns a $1\times n$ null matrix, for \texttt{IdentityJac} a $1\times n$ matrix containing only ones, for \texttt{DiagJac} a $1\times n$ matrix which is the transposed of the diagonal vector, and lastly for \texttt{SparseJac} it returns a $1\times n$ matrix where each column is added together. To check that this new \texttt{sum} function actually is more efficient, we can again use the \textit{@btime} macro function from the \emph{\cite{BenchmarkTools}} library. By creating a random \texttt{CJAD}-variable of length 400 with all of the four different Jacobian types(all $400\times 400$ with random values), we can compare how efficient the two methods sum up the \texttt{CJAD}-variable. The result is displayed in \autoref{tab:differentSumFunctions} and shows that even though the method of only implementing the \texttt{iterate} function is elegant to obtain the \texttt{sum} function, it can be much more efficient both in memory allocation and speed by implementing it specifically.
 
 \begin{table}[H]
     \centering
@@ -253,6 +287,8 @@ Instead of retrieving each row, one by one, like we did using \texttt{Base.sum},
          \hline
     \end{tabular}
 \end{table}
+
+\todo[inline]{Skrive om vektorisert vs ikke? Se drafts}
 \section{Benchmarking Automatic Differentiation}
 As mentioned in \autoref{sec:Julia}, Julia already has an AD library called \textit{ForwardDiff} \emph{\citep{ForwardDiff}} that uses forward AD. Hence, it would be interesting to see how the different implementations compares when the functions evaluated are getting larger. As another reference, I have added the AD implementation in the MATLAB Reservoir Simulation Toolbox (MRST) \emph{\citep{mrstHomepage}} to the benchmark, to see how the Julia implementations compare to an optimized AD tool in MATLAB. To benchmark the efficiency of the different AD tools, I have evaluated the vector function $f: \Re^{n\times 3} \rightarrow \Re^n $ where
 \begin{equation}
