--- a/backmatter/references.bib
+++ b/backmatter/references.bib
@@ -200,3 +200,13 @@ eprint = {
   year = {n.d.},
   note = {Accessed 27.02.2019}
 }
+
+
+
+@misc{Dot_vectorization,
+  key = {More Dots: Syntactic Loop Fusion in Julia},
+  url = {https://julialang.org/blog/2017/01/moredots},
+  urldate = {2019-03-13},
+  year = {2017.01.21},
+  note = {Accessed 13.03.2019}
+}
