--- a/03_implementation.tex
+++ b/03_implementation.tex
@@ -192,26 +192,29 @@ What we immediately observe is that two of the multiplications are unnecessary s
 \end{itemize}
 Now the multiple dispatch system in Julia comes in handy. Since Julia understands at run-time what type of \texttt{CustomJac} we have, whether it is a \texttt{NullJac}, \texttt{IdentityJac}, \texttt{DiagJac} or \texttt{SparseJac}, we can implement different methods for all possible combinations. Since we in each implementation now know what type of matrix we are dealing with, we can optimize the performance. As an example, consider the calculation of the Jacobian w.r.t the primary variable \textbf{y} in \eqref{eq:JacobianCalculationY} (All the implementations of operators on structs extending the \texttt{CustomJac} type are called from outer functions that check the legality of the operations. Hence there are no checks in the following presented implementations). First we have a vector multiplied element-wise by a null matrix. The implementation
 \lstinputlisting{code/vectorTimesNullJac.jl}
-efficiently knows immediately that there is no need to do any calculations, the result will be a null matrix of the same size as before. Without diving too deep into the implementation of \texttt{SparseMatrixCSC}, but only by considering what kind of information the \texttt{SparseMatrixCSC}-struct contains, this implementation should not make a big difference in the computational efficiency of \texttt{CJAD} compared to \texttt{FAD}. The reason for this is that the implementation of \texttt{SparseMatrixCSC} will also quickly realize that its vectors are of length zero and the matrix is a zero matrix. The speed difference of the two implementations will hence be small. However, the second calculation in \eqref{eq:JacobianCalculationY} is a vector multiplied element-wise by an identity matrix. The result will be a diagonal matrix with the values of the vector on the diagonal. The \texttt{SparseMatrixCSC} implementation only knows that we have a sparse matrix with some values and is unaware that it actually is the identity matrix. This means that it has to do all the calculations without any shortcuts.  The implementation for \texttt{IdentityJac} however, automatically knows the result of this calculation and simply makes a diagonal Jacobian with the vector on the left hand side:
+efficiently knows immediately that there is no need to do any calculations, the result will be a null matrix of the same size as before. Without diving too deep into the implementation of \texttt{SparseMatrixCSC}, but only by considering what kind of information the \texttt{SparseMatrixCSC}-struct contains, this implementation should not make a big difference in the computational efficiency of \texttt{CJAD} compared to \texttt{FAD}. The reason for this is that the implementation of \texttt{SparseMatrixCSC} will also quickly realize that its vectors are of length zero and the matrix is a zero matrix. The speed difference of the two implementations will hence be small for this particular operator. However, the second calculation in \eqref{eq:JacobianCalculationY} is a vector multiplied element-wise by an identity matrix. The result will be a diagonal matrix with the values of the vector on the diagonal. The \texttt{SparseMatrixCSC} implementation only knows that we have a sparse matrix with some values and is unaware that it actually is the identity matrix. This means that it has to do all the calculations without any shortcuts.  The implementation for \texttt{IdentityJac} however, automatically knows the result of this calculation and simply makes a diagonal Jacobian with the vector on the left hand side:
 \lstinputlisting{code/vectorTimesIdentityJac.jl}
-This is the first calculation we have seen that will contribute to make \texttt{CJAD} more efficient than \texttt{FAD}. To finish the calculations in \eqref{eq:JacobianCalculationY}, we finally have to add a null matrix and a diagonal matrix. Since there is really no need of doing this adding, the implementation simply returns the diagonal matrix:
+This is the first calculation we have seen that will make \texttt{CJAD} considerably more computational efficient than \texttt{FAD}. To finish the calculations in \eqref{eq:JacobianCalculationY}, we finally have to add a null matrix and a diagonal matrix. Since there is really no need of doing this adding, the implementation simply returns the diagonal matrix:
 \lstinputlisting{code/nullJacPlusDiagJac.jl}
-For the same reason as explained for the element-wise multiplication between a vector and a \texttt{NullJac} matrix, this implementation will not have any big advantages compared to the \texttt{SparseMatrixCSC} implementation used in \texttt{FAD} as it will also quickly figure out the needlessness of the calculation.
+For the same reason as explained for the element-wise multiplication between a vector and a \texttt{NullJac} matrix, this implementation will only have small advantages compared to the \texttt{SparseMatrixCSC} implementation used in \texttt{FAD}, as it will also quickly figure out the needlessness of the calculation.
 
-Another type of calculation that \texttt{CJAD} will be more efficient than \texttt{FAD}'s \texttt{SparseMatrixCSC} implementation is when a vector is element-wise multiplied with a diagonal Jacobian. This is an operation that is often used, because in addition to be used when we multiply a \texttt{CJAD}-variable with a vector, it appears every time the product rule and the chain rule is used. This is every time we multiply two \texttt{CJAD}-variables or when we evaluate an elementary function like the exponential (given that the Jacobian is of \texttt{DiagJac} type). Since this type of element-wise multiplication is simply two diagonal matrices multiplied together, \texttt{CJAD}'s implementation can element-wise multiply the two vectors and obtain the new diagonal of the new Jacobian:
+Another type of calculation that \texttt{CJAD} will be more efficient than \texttt{FAD}'s \texttt{SparseMatrixCSC} implementation is when a vector is element-wise multiplied with a diagonal Jacobian. This "vector times \texttt{CJAD}-variable operator" is often used, because in addition to be used when we specifically multiply a \texttt{CJAD}-variable with a vector, it appears every time the product- and chain rule is used. The product rule is used every time we multiply two \texttt{CJAD}-variables and the chain rule appears when we evaluate an elementary function like the exponential or take the power of a \texttt{CJAD}-variable. For the case of the Jacobian being a \texttt{DiagJac}, this type of element-wise multiplication is simply two diagonal matrices multiplied together. \texttt{CJAD}'s implementation knows this and can element-wise multiply the two vectors and obtain the new diagonal of the new Jacobian:
 \lstinputlisting{code/vectorTimesDiagJac.jl}
-The same operation for \texttt{FAD} will be slower since \texttt{SparseMatrixCSC} does not possess any information that the matrix is diagonal and it has to perform the operation as a regular multiplication between to sparse matrices. This will include checks to be certain that the multiplication is done correctly, and will hence be slower than simply element-wise multiply two vectors. As said this operation appears often as it is used in the chain rule and the product rule. Consider the product rule and the implementation
+The same operation for \texttt{FAD} will be slower since \texttt{SparseMatrixCSC} does not possess any information that the matrix is diagonal and it has to perform the operation as a regular multiplication between to sparse matrices. This will include checks to be certain that the multiplication is done correctly, and will hence be slower than to simply element-wise multiply two vectors. As said, this operation appears often as it is used in the chain rule and the product rule. Consider the product rule and the implementation
+\lstinputlisting{code/productRule.jl}
+We loop through all the Jacobians and perform the product rule to obtain the new Jacobians. \texttt{A.val} and \texttt{B.val} are the value vectors and \texttt{B.customJacs[i]} and \texttt{A.customJacs[i]} are one of the four extensions of \texttt{CustomJac}. From this implementation we can see that for every iteration where one or two of the Jacobians are something else than \texttt{SparseJac}, we will gain computational efficiency like explained for the element-wise multiplication operator between a vector and a \texttt{NullJac/IdentityJac/DiagJac}. And if both of the corresponding Jacobians for \texttt{A} and \texttt{B} are different from \texttt{SparseJac}, then we will also gain computational efficiency from the addition operator. Just like for the element-wise multiplication, element-wise addition is faster for \texttt{NullJac/IdentityJac/DiagJac} than it is for the sparse matrices in \texttt{SparseMatrixCSC}.
 
-
-Up until now we have seen that for calculations including Jacobians of the types \texttt{NullJac}, \texttt{IdentityJac} and \texttt{DiagJac} we can take shortcuts in the calculations to gain better computational efficiency. But when the Jacobians no longer are null, identity or diagonal, \texttt{CJAD} and \texttt{FAD} are equal, as \texttt{CJAD} transitions to use the \texttt{SparseMatrixCSC}-library as well with its \texttt{SparseJac} type. It is hence interesting to look closer into how we handle element-wise multiplication between a vector and a \texttt{SparseJac}, as this is an operation that is done frequently in the product rule and the chain rule as explained before. There are two different ways of implementing this operator that will use different parts of the \texttt{SparseMatrixCSC} library. The first implementation is to convert the vector into a sparse diagonal matrix and perform a matrix times matrix multiplication with \texttt{SparseMatrixCSC} matrices:
+Up until now we have seen that for calculations including Jacobians of the types \texttt{NullJac}, \texttt{IdentityJac} and \texttt{DiagJac} we can take shortcuts in the calculations to gain better computational efficiency. But when the Jacobians no longer are null, identity or diagonal, \texttt{CJAD} and \texttt{FAD} are equal. This is because \texttt{CJAD} transitions to use the \texttt{SparseMatrixCSC}-library as well with its \texttt{SparseJac} type. So far we have looked at how we overload the element-wise multiplication operator for a vector and the three Jacobian types except for \texttt{SparseJac}. As this is an operator that is often used it is  interesting to look closer into how we handle this operator overloading for \texttt{SparseJac}. There are two different ways of implementing this operator that will use different parts of the \texttt{SparseMatrixCSC} library. The first implementation is to convert the vector into a sparse diagonal matrix and perform a matrix times matrix multiplication with \texttt{SparseMatrixCSC} matrices:
 \lstinputlisting{code/vectorAsMatrixTimesSparseJac.jl}
-I will call this method the \textit{matrix-multiplication} method. The second method is keeps the vector form and use element-wise multiplication between the vector and the \texttt{SparseMatrixCSC} matrix:
+I will call this method the \textit{matrix-multiplication} method. The second method keeps the vector form and use element-wise multiplication between the vector and the \texttt{SparseMatrixCSC} matrix:
 \lstinputlisting{code/vectorTimesSparseJac.jl}
-I will call this the \textit{dot-multiplication} method. As it is difficult to say without first hand knowledge of the implementation of \texttt{SparseMatrixCSC} which method is best to implement, I will test the two methods against each other. As a test I have created a random vector of length 40 and a random sparse matrix of size $40\times 40$ with 20 percent of the elements as non-zero. I will then perform the element-wise multiplication 10 000 times to separate the efficiency of the two methods. To check which method is actually more efficient, and by how much, we can use the \textit{@btime} macro function from the \emph{\cite{BenchmarkTools}} library. This function gives us the number of allocations, the amount of memory used and the time spent. \footnote{All benchmarks in this project are performed on a MacBook Pro (Retina, 13-inch, Late 2013), 2,8 GHz Intel Core i7 processor and 16 GB 1600 MHz DDR3 memory.}
+I will call this the \textit{dot-multiplication} method. As it is difficult to say without first hand knowledge of the implementation of \texttt{SparseMatrixCSC} which method is best to implement, I will test the two methods against each other. 
+\todo{Klarte ikke å finne grunnen til dette ved å se i kildekode. Kanskje noen på Sintef vet hvorfor?}
+As a test I have created a random vector of length 40 and a random sparse matrix of size $40\times 40$ with 20 percent of the elements as non-zero. I will then perform the element-wise multiplication 10 000 times to separate the efficiency of the two methods. To check which method is actually more efficient, and by how much, we can use the \textit{@btime} macro function from the \emph{\cite{BenchmarkTools}} library. This function gives us the number of allocations, the amount of memory used and the time spent. \footnote{All benchmarks in this project are performed on a MacBook Pro (Retina, 13-inch, Late 2013), 2,8 GHz Intel Core i7 processor and 16 GB 1600 MHz DDR3 memory.}
 The results of the test can be seen in \autoref{tab:VectorMatrixMultiplicationSmallMatrix}.
 \begin{table}[H]
     \centering
-    \caption{The number of allocations, amount of memory and time spent is given for the element-wise multiplication of a vector of length 40 and a sparse matrix of size $40\times 40$ with 20 percent of the elements as non-zero. The vector and matrix is multiplied together 10 000 times.}
+    \caption{The number of allocations, amount of memory and time spent for element-wise multiplication of a vector of length 40 and a sparse matrix of size $40\times 40$ with 20 percent of the elements as non-zero. The vector and matrix is multiplied together 10 000 times.}
     \label{tab:VectorMatrixMultiplicationSmallMatrix}
     \def\arraystretch{1.5}
     \begin{tabular}{cccc}
@@ -225,7 +228,7 @@ The results of the test can be seen in \autoref{tab:VectorMatrixMultiplicationSm
 The results from \autoref{tab:VectorMatrixMultiplicationSmallMatrix} shows that the \textit{dot-multiplication} method has far less allocations, is more than twice as fast, but it uses a bit more memory. Based on this it might tempting to say that the \textit{dot-multiplication} method is a better choice of implementation than the \textit{matrix-multiplication}. However, we will use \texttt{CJAD} on numerical applications and the matrices we will work on will be much larger and very sparse. As a test example I have used a matrix from \autoref{ch:FlowSolver} that is more relevant than the matrix used in the test for \autoref{tab:VectorMatrixMultiplicationSmallMatrix}. This matrix is of size $8000\times 8000$ and only 0.08 percent of the elements are non-zero. The results can be seen in \autoref{tab:VectorMatrixMultiplicationFlowSolverMatrix}
 \begin{table}[H]
     \centering
-    \caption{The number of allocations, amount of memory and time spent is given for the element-wise multiplication of a vector of length 8000 and a matrix of size $8000\times 8000$ with 0.08 percent non-zero elements. The matrix is taken from \autoref{ch:FlowSolver}.}
+    \caption{The number of allocations, amount of memory and time spent for element-wise multiplication of a vector of length 8000 and a matrix of size $8000\times 8000$ with 0.08 percent non-zero elements. The matrix is taken from \autoref{ch:FlowSolver}.}
     \label{tab:VectorMatrixMultiplicationFlowSolverMatrix}
     \def\arraystretch{1.5}
     \begin{tabular}{cccc}
@@ -236,10 +239,10 @@ The results from \autoref{tab:VectorMatrixMultiplicationSmallMatrix} shows that 
          \hline
     \end{tabular}
 \end{table}
-As we can see from \autoref{tab:VectorMatrixMultiplicationFlowSolverMatrix} the \textit{dot-multiplication method} still has far less allocations, but now it uses a lot more memory and as a consequence it is now much slower than the \textit{matrix-multiplication} method. This shows that for the purpose of this project, the \textit{matrix-multiplication} method is a much better choice of implementation.
+As we can see from \autoref{tab:VectorMatrixMultiplicationFlowSolverMatrix} the \textit{dot-multiplication method} still has far less allocations, but now it uses a lot more memory than the \textit{matrix-multiplication} method. As a consequence it is now almost 100 times slower than the \textit{matrix-multiplication} method! This shows that for the purpose of this project, the \textit{matrix-multiplication} method is a much better choice of implementation.
 
 
-\subsection{Efficient Code VS Readable and Elegant Code}
+\subsection{Efficient- VS Readable- and Elegant Code}
 There is usually a fine balance between writing efficient code and readable/elegant code. Sometimes you have the opportunity to do both, but often you have to choose which of them you want to give most focus. In the end of \autoref{sec:FAD} I explained how we can elegantly implement the \texttt{sum} function, and all other built-in functions that iterate through the \texttt{FAD}-variables, only by implementing the \texttt{iterate} function. This is a very elegant use of Julia's multiple dispatch system as we get a lot of functionality "for free". The downside however is that we loose potential computational efficiency that we could achieve by implementing the \texttt{sum} function ourselves. Let us define a random function $\psi$ where the AD-representation and the \texttt{sum} of $\psi$ is given by
 \begin{multicols}{2}
     \noindent
@@ -270,9 +273,9 @@ There is usually a fine balance between writing efficient code and readable/eleg
         \right].
     \end{align*}
 \end{multicols}
-Consider now the previous approach where we only have implemented the \texttt{iterate} function and we use the \texttt{Base.sum} function (The standard \texttt{sum} function in Julia) to sum up the values in $\psi$. For each iteration in the addition we access row $i$ in the $\psi$ and add it to the total sum. This consist of extracting row $i$ from each Jacobian and creating a new AD-variable only consisting of row $i$. This leads to a lot of extra memory allocation, and in the case for $\psi$ we have to allocate memory for three new AD-variables. This extra allocation can avoided by doing the summation of each column at once instead of operate on a row to row basis. For \texttt{CJAD} this can be done with the following implementation of \texttt{sum}:
+Consider now the previous approach where we only have implemented the \texttt{iterate} function and we use the \texttt{Base.sum} function (The standard \texttt{sum} function in Julia) to sum up the values in $\psi$. For each iteration in the addition we access row $i$ in $\psi$ and add it to the total sum. This consist of extracting row $i$ from the value vector and each Jacobian and then creating a new AD-variable only consisting of row $i$. This leads to a lot of extra memory allocation, and in the case for $\psi$ we have to allocate memory for three new AD-variables. This extra allocation can be avoided by doing the summation of each column at once, instead of operate on a row to row basis. For \texttt{CJAD} this can be done with the following implementation of \texttt{sum}:
 \lstinputlisting{code/sum.jl}
-Instead of retrieving each row, one by one, like we did using \texttt{Base.sum}, we now add up each column in one go. \texttt{colSum} is a function implemented in each extended type of \texttt{CustomJac} that sums up all the columns in the Jacobians and returns a $1\times n$ matrix. Here $n$ is a number depending on the space for the relevant primary variable($n_\psi = 3$). For \texttt{NullJac} the function simply returns a $1\times n$ null matrix, for \texttt{IdentityJac} a $1\times n$ matrix containing only ones, for \texttt{DiagJac} a $1\times n$ matrix which is the transposed of the diagonal vector, and lastly for \texttt{SparseJac} it returns a $1\times n$ matrix where each column is added together. To check that this new \texttt{sum} function actually is more efficient, we can again use the \textit{@btime} macro function from the \emph{\cite{BenchmarkTools}} library. By creating a random \texttt{CJAD}-variable of length 400 with all of the four different Jacobian types(all $400\times 400$ with random values), we can compare how efficient the two methods sum up the \texttt{CJAD}-variable. The result is displayed in \autoref{tab:differentSumFunctions} and shows that even though the method of only implementing the \texttt{iterate} function is elegant to obtain the \texttt{sum} function, it can be much more efficient both in memory allocation and speed by implementing it specifically.
+Instead of retrieving each row, one by one, like we did using \texttt{Base.sum}, we now add up each column in one go. \texttt{sum(A.val)} is the built in sum function in \texttt{Base} for summation of a vector and \texttt{colSum} is a function implemented in each extended type of \texttt{CustomJac}. This function sums up all the columns in the Jacobians and returns a $1\times n$ matrix. Here $n$ is a number depending on the dimension for the relevant primary variable($n_\psi = 3$). For \texttt{NullJac} the function simply returns a $1\times n$ null matrix, for \texttt{IdentityJac} a $1\times n$ matrix containing only ones, for \texttt{DiagJac} a $1\times n$ matrix which is the transposed of the diagonal vector, and lastly for \texttt{SparseJac} it returns a $1\times n$ matrix where all the non-zero values in each column is added together. To check that this new \texttt{sum} function actually is more efficient, we can again use the \textit{@btime} macro function from the \emph{\cite{BenchmarkTools}} library. By creating a random \texttt{CJAD}-variable of length 400 with all of the four different Jacobian types(all $400\times 400$ with random values), we can compare how efficient the two methods sum up the \texttt{CJAD}-variable. The result is displayed in \autoref{tab:differentSumFunctions} and shows that even though the method of only implementing the \texttt{iterate} function is elegant to obtain the \texttt{sum} function, it can be much more efficient both in memory allocation and speed by implementing it specifically.
 
 \begin{table}[H]
     \centering
@@ -280,10 +283,30 @@ Instead of retrieving each row, one by one, like we did using \texttt{Base.sum},
     \label{tab:differentSumFunctions}
     \def\arraystretch{1.5}
     \begin{tabular}{cccc}
-    \textbf{Function} & \textbf{Number of Allocations} & \textbf{Kilobytes of Memory Used} & \textbf{Microseconds for Evaluation} \\
+    \textbf{Function} & \textbf{Number of Allocations} & \textbf{Kilobytes} & \textbf{Microseconds} \\
         \hline
-         \texttt{sum} & 40 & 79 & $\approx$80 \\  
-         \texttt{Base.sum} & 28371 & 19 597 & $\approx$ 60 000\\ 
+         \texttt{sum} & 40 & 79 & 81 \\  
+         \texttt{Base.sum} & 28371 & 19 597 & 58 051\\ 
+         \hline
+    \end{tabular}
+\end{table}
+
+\subsubsection{Vectorized and Devectorized code}
+The second issue I want to discuss that is concerning efficient- VS readable- and elegant code, is vectorized and devectorized code. The difference between vectorized og devectorized code can be quickly explained by an example. Consider two vectors \textbf{x} and \textbf{y} of the same length. If we want to element-wise multiply the elements in the two vectors we can either use the vectorized method: \texttt{x .* y}, or we can loop through the vectors in the devecotrized method:
+
+In a blog post, the former Julia developer John Myles White  explains how Julia is faster at executing devectorized code compared to vectorized code\emph{\citep{Vectorization}}. This is in sharp contrast to other mathematical programming languages like MATLAB, where you have to vectorize your code to get the best performance. In the case for MATLAB the reason for this is that when you vectorize your code, it uses optimized code in C to execute the calculations. If you devectorize your code 
+
+\begin{table}[H]
+    \centering
+    \caption{}
+    \label{tab:dotOperator}
+    \def\arraystretch{1.5}
+    \begin{tabular}{cccc}
+    \textbf{Function} & \textbf{Number of Allocations} & \textbf{Megabytes} & \textbf{Seconds} \\
+        \hline
+         \texttt{dotsOutside} & 2000 & 789 & 2.551 \\  
+         \texttt{dotsInside} & 6000 & 2 405 & 3.252 \\ 
+         \texttt{devectorized} & 2000 & 789 & 2.571 \\
          \hline
     \end{tabular}
 \end{table}
