--- a/backmatter/references.bib
+++ b/backmatter/references.bib
@@ -201,9 +201,7 @@ eprint = {
   note = {Accessed 27.02.2019}
 }
 
-
-
-@misc{Dot_vectorization,
+@misc{MoreDotsJuliaBlog,
   key = {More Dots: Syntactic Loop Fusion in Julia},
   url = {https://julialang.org/blog/2017/01/moredots},
   urldate = {2019-03-13},
