--- a/backmatter/references.bib
+++ b/backmatter/references.bib
@@ -1,11 +1,10 @@
-@misc{lieMrstUrl,
-title=      " An Introduction to Reservoir Simulation Using MATLAB: User guide for the Matlab Reservoir Simulation Toolbox (MRST)",
+@book{lieMrstUrl,
+title=      "An Introduction to Reservoir Simulation Using MATLAB/GNU Octave: User guide for the MATLAB Reservoir Simulation Toolbox (MRST)",
 author=     "Lie, Knut-Andreas",
-url =       "https://folk.ntnu.no/andreas/mrst/mrst-cam.pdf",
-urldate =   "2018-10-25",
-year =      "2018",
-note = {Accessed 25.10.2018}
+year =      "2019",
+publisher = "Cambridge University Press"
 }
+
 @misc{surveyAD,
 title=      "Automatic Differentiation in Machine Learning: a Survey",
 author=     "Baydin, ATILIM GÜNEŞ and Pearlmutter, Barak A. and Radul, Alexey Andreyevich and Siskind, Jeffrey Mark",
@@ -90,10 +89,10 @@ year = {n.d.},
 }
 
 @misc{JuliaIssueDot,
-  key = {Julia issue dot operators},
+  key = {Julia issue:dot operators},
   url = {https://github.com/probcomp/GenExperimental.jl/issues/46},
   urldate = {2018-12-02},
-  year = {n.d.},
+  year = {2017},
   note = {Accessed 02.12.2018}
 }
 
